# root-eclipse

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  Makefile-GNU  README (copy).md  README.md  energy-deposition
md/: README-old.md  root-post-cmake-generator.md  root-post-cmake4eclipse.md
src/: LinkDef.h  main.cpp  yourRootScript.C
